@@ -6,6 +6,8 @@
  src/connection_base.cxx, src/cursor.cxx, src/pipeline.cxx, src/result.cxx,
  src/tablereader.cxx:
   - Keep track of client encoding in connections and results
+ src/util.cxx:
+  - Oops: strlcpy() is supposed to return something
  include/pqxx/transaction.hxx, include/pqxx/trigger.hxx, src/tablewriter.cxx:
   - Updated copyright notices
 2007-02-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
